testing for z index fix for on ie on modal background click issue.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -33,6 +33,7 @@
 #simplemodal-container iframe{
 	overflow-y: hidden;
 	overflow-x: hidden;
+	z-index:3200;
 }
 
 #simplemodal-container a.modalCloseImg {
